[tool.pdm]

[tool.pdm.scripts]
dev = "uvicorn src.main:app --reload"

[tool.ruff]
select = [
    "F",
    "E",
    "N",
    "UP",
    "ANN",
    "S",
    "BLE",
    "FBT",
    "C4",
    "DTZ",
    "G",
    "PIE",
    "SIM",
    "PTH",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[project]
name = "pcp"
version = "0.1.0"
description = "Self-hostable coding courses/problems platform"
authors = [
    { name = "PixelSam123", email = "77851256+PixelSam123@users.noreply.github.com" },
]
dependencies = [
    "fastapi>=0.95.0",
    "httpx>=0.24.0",
    "python-multipart>=0.0.6",
    "uvicorn[standard]>=0.21.0",
    "sqlalchemy>=2.0.7",
    "argon2-cffi>=21.3.0",
    "python-jose[cryptography]>=3.3.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "GPL-3.0" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
